--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<ul>
 								<li>
 									
-									<a href="https://www.x6d.com" target="_blank"><i>https://www.x6d.com</i></a>
+									<a href="https://www.x6d.com" target="_blank"><i><p style="font-family:arial;color:red;font-size:20px;">福利破解软件库</p></i></a>
 									
 								</span></span></li>
 								<li>
