--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<h1>地址发布页</h1>
 				<div class="content">
 					<div class="content-top">				
-							<h2>PC 请 Ctrl+D 收藏本页到浏览器收藏夹</h2>
+							<h2>请 Ctrl+D 收藏本页到浏览器收藏夹</h2>
 							<ul>
 								<li>
 									
