--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 								</span></span></li>
                                                                 <li>
 									
-									<a href="wwa.jsiwz2.com" target="_blank"><i><p style="font-family:arial;color:red;font-size:20px;">王者吃鸡内部透视</p></i></a>
+									<a href="http://wwa.jsiwz2.com" target="_blank"><i><p style="font-family:arial;color:red;font-size:20px;">王者吃鸡内部透视</p></i></a>
 									
 								</span></span></li>
 								<li>
