--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
     <div id="all">
         <div class="wrapper">
             <div class="main">
-				<h1>地址发布页</h1>
 				<div class="content">
 					<div class="content-top">				
-							<h2>请Ctrl+D收藏本页</h2>
+							<h2>请尽快收藏本页</h2>
 							<ul>
 								<li>
 									
